# platform-integration

./: .gitignore  Dockerfile  compose.yaml  pyproject.toml
app/: flows.py  main.py  pyproject.toml
app/api/v1/routers/: auth.py  health.py  power_automate.py  power_automate_user_flows.py
app/core/: config.py  get_flow_url.py  marketplace.py  microsoft_auth_client.py  storage.py
app/core/authentication/: auth_middleware.py  auth_token.py
app/schemas/: auth.py  base.py  page.py  power_automate_user_flows.py  token.py
